# GameArch

./: CMakeLists.txt  CMakePresets.json  client.cpp  client.py  requirements.txt  server.cpp
.devcontainer/: devcontainer.json
docker/: .dockerignore  CMakeLists.txt  check.Dockerfile  dev.Dockerfile  docker-compose-world.yml
protos/: unitcontrol.proto
scripts/: initialise_python_environment.sh  install_grpc.sh  launch_python_client.sh  loop.sh  run_compile.sh
tennis_ball/: README.md  main.cpp
